@@ -7,6 +7,20 @@ use Carp qw/croak/;
 use Scalar::Util 'weaken';
 use namespace::clean 0.20;
 
+use overload 
+	'==' => sub {
+		my ($left, $right, $switch) = @_;
+		return 1 if not defined $left->[0] && not defined $right->[0];
+		return $left->[0] == $right->[0];
+	},
+	'!=' => sub {
+		my ($left, $right, $switch) = @_;
+		return 0 if not defined $left->[0] && not defined $right->[0];
+		return 1 if defined($left->[0]) != defined($right->[0]);
+		return $left->[0] != $right->[0];
+	},
+	fallback => 1;
+
 sub new {
 	my ($class, $list, $node) = @_;
 	my $self = bless [ $node, $list ], $class;
