@@ -1,4 +1,5 @@
 {{$NEXT}}
+          - Add compare overload
           - Fix end method to return a valid value
 
 0.003     2011-01-25 15:38:59 Europe/Amsterdam
